tests/errors/arrays/assign-wrong-element-type.fn
---
Description: Assigning a wrong type through array index
Expected: FN3405
---

type Program
{
    static fn Main -> i32
    {
        var arr = [1, 2, 3]
        arr[0] = 1.0
        return 0
    }
}
